2004-01-02  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/config_example.py:
	* src/main.py:
	* src/session.py:
	* src/legacy/icqt.py:
	* src/webadmin:
	Added web admin interface + statistics gathering.

2004-12-30  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/disco.py:
	Fixed 'not valid' response to version requests.

2004-12-29  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Added necessary pieces for typing notification to work.

2004-12-28  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	Added "Online" check just to be sure.

	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	* src/config_example.py:
	Added setProfile command as well as capability to do cross-im chat.

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Added patches for proper ICQ user status from Jonas Adahl.

2004-12-25  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Undid patch from earlier.

	* src/lang.py:
	Applied new dutch translation.

	* src/legacy/icqt.py:
	Applied patch to have transport subscribe back to users.

	* src/register.py:
	Applied patch from Magnus Henoch to fix ejabberd issues.

2004-12-23  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/disco.py:
	* src/utils.py:
	* src/tlib/oscar.py:
	* src/tlib/countrycodes.py:
	* src/legacy/icqt.py:
	Jonas Adahl's patches for better vcards support.

	* src/tlib:
	Many updates to clean up and add new requirements.

	* src/disco.py:
	* src/groupchat.py:
	* src/jabw.py:
	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/xdb.py:
	Updated to match recent MSN code more accurately.

2004-12-20  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Applied endian patch from Jonas Adahl.

2004-12-14  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	Applied patch to messageIDs handling as suggested by macbar.
